--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,4 +1,9 @@
 --------------------------------------------------------------------------------------------------------------------------------------------
+TAG v03_18_00
+--------------------------------------------------------------------------------------------------------------------------------------------
+Added TwoViewLongTracks and TwoViewSimpleTracks tools to LArTwoViewMatching.
+
+--------------------------------------------------------------------------------------------------------------------------------------------
 TAG v03_17_00
 --------------------------------------------------------------------------------------------------------------------------------------------
 Update to C++17 standard.
